# webctfkit

./: .gitignore  pyproject.toml
tests/: test_php.py  test_xss.py
