[tool.poetry]
name = "webtools"
version = "0.1.0"
description = "A collection of essential helper methods for web-based Capture The Flag (CTF) challenges."
authors = ["mohammedgqudah <mohghq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.2"
jsmin = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
